<resources>
    <string name="app_name">Fetch Data From Json Using Handler</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="body">Body Will Appear Here !</string>
    <string name="title">Title Will Appear Here</string>
    <string name="id">ID Will Appear Here</string>
    <string name="userId">User ID Will Appear Here</string>
</resources>